--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 rgba(0, 0, 0, 0),
                 rgb(20, 20, 20)
               ),
-              url(img/f-f-2.jpg);
+              url(./img/f-f-2.jpg);
           ">
           <img
             class="featured-title"
